#20: [EMail] Folder synchronizer (http://github.com/fb71/areca/issues/20)
Async rework: basic API adapted

- everything is based on areca.common.Promise
- basic test are running
- ImapFolderSynchronizer is running
- still a lot work TODO